--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
     </head>
     <body>
         <div id="wrapper">
-            <!-- <div id="menu_wrapper">
-                <h1>Donkey Kong</h1>
-                <h2>Free Play</h2>
-                <h3>Press Enter to Play</h3>
-            </div> -->
+            <div id="menu_wrapper">
+                <div id='gameTitle'></div>
+                <div id='playButon'> Click here to start </div>
+                <div id='buttonsHelper'></div>
+                <div id='credits'></div>
+            </div>
             <div id="next_level">
                 <h1>Donkey Kong</h1>
                 <h2>Score:</h2>
