adding images for menu

--- a/index.html
+++ b/index.html
@@ -8,10 +8,14 @@
     <body>
         <div id="wrapper">
             <div id="menu_wrapper">
-                <div id='gameTitle'></div>
-                <div id='playButon'> Click here to start </div>
-                <div id='buttonsHelper'></div>
-                <div id='credits'></div>
+                <div id='gameTitle'>Krakoon</div>
+                <div id='playButton'> Press enter to play </div>
+                <div id='buttonsHelper'>
+                    <img src="images/lineLight02.png">
+                    <img src="images/lineLight40.png">
+                    <img src="images/lineLight10.png">
+                </div>
+                <div id='credits'><img src="images/p1_jump.png"></div>
             </div>
             <div id="next_level">
                 <h1>Donkey Kong</h1>
