style menu + pattern bg + changements dom

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                     <img src="images/lineLight40.png">
                     <img src="images/lineLight10.png">
                 </div>
-                <div id='credits'><img src="images/p1_jump.png"></div>
+                <div id='charImg'><img src="images/p1_jump.png"></div>
             </div>
             <div id="next_level">
                 <h1>Donkey Kong</h1>
