solvin some bugs

--- a/index.html
+++ b/index.html
@@ -18,14 +18,15 @@
                 <div id='charImg'><img src="images/p1_jump.png"></div>
             </div>
             <div id="next_level">
-                <h1>Donkey Kong</h1>
-                <h2>Score:</h2>
-                <h3>Press Enter for Next Level</h3>
+                <div id='gameTitle'>Krakoon</div>
+                <div id='playButton'> Press enter for next level </div>
+                <div id='score'></div>
             </div>
             <div id="game_over">
-                <h1>Donkey Kong</h1>
-                <h2>Game Over</h2>
-                <h3>Insert Coins</h3>
+                <div id='gameTitle'>Krakoon</div>
+                <h3 id='gameOver'>Game Over</h3>
+                <div id='coins'>Insert Coins</div>
+                <div id='scoreGameOver'></div>
             </div>
             <canvas id="canvas" width="600" height="600">Your brower doesn't support the HTML5 canvas tag.</canvas>
         </div>
