--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             <div id="game_over">
                 <div id='gameTitle'>Krakoon</div>
                 <h3 id='gameOver'>Game Over</h3>
+                <div id='playButton'> Press enter to play </div>
                 <div id='coins'>Insert Coins</div>
                 <div id='scoreGameOver'></div>
             </div>
